objects/ESC_SearchSettings__mdt.object
<CustomObject>
    <description>will be using the fields of it for providing search functionality</description>
    <fields>
        <fullName>ESC_ApplicableToProfiles__c</fullName>
        <description>add comma separated profile names for which the setting is applicable.. Only for the mentioned profiles they will be activated</description>
        <label>ApplicableToProfiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Def__c</fullName>
        <description>the default value for search</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_FieldAPIName__c</fullName>
        <label>FieldAPIName</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_HFF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>will hide field from fiter</description>
        <label>Hide from filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Hide_From_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide From Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_IsKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will decide whether record is a filter field or result field, checked --&gt;  filter field</description>
        <label>IsKey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_LabelName__c</fullName>
        <description>Mention the custom Label to override the field label appearing on the search page</description>
        <label>Override Name With Label:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_ObjectAPIName1__c</fullName>
        <description>Select object type for which criteria has to be inserted</description>
        <inlineHelpText>Select object type for which criteria has to be inserted</inlineHelpText>
        <label>ObjectAPIName</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>LCRM_Contact_SSD__c</fullName>
                </value>
                <value>
                    <fullName>Source_System_Detail__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_ParamValue__c</fullName>
        <inlineHelpText>In case of parent child relation ship, stores the lookup field API Name.</inlineHelpText>
        <label>Param Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_ShowAsLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be shown as hyper link</description>
        <label>ShowAsLink</label>
        <type>Checkbox</type>
    </fields>
    <label>SearchSettings</label>
    <listViews>
        <fullName>Usl</fullName>
        <columns>MasterLabel</columns>
        <columns>ESC_Sequence__c</columns>
        <columns>ESC_ObjectAPIName1__c</columns>
        <columns>ESC_FieldAPIName__c</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>ESC_ApplicableToProfiles__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESC_ApplicableToProfiles__c</field>
            <operation>contains</operation>
            <value>USL Helpdesk agent</value>
        </filters>
        <label>Usl</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SearchSettings</pluralLabel>
</CustomObject>